plugins {
    id "org.sonarqube" version "6.2.0.5505"
    id 'java'
}

sonar {
    properties {
        property "sonar.projectKey", "kousen_spring-and-spring-boot"
        property "sonar.organization", "kousen-it-inc"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}

allprojects {
    group = 'com.kousenit'
    
    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'jacoco'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    // Include templates/config in analysis so Sonar can check them (e.g. Thymeleaf XSS).
    // Exclude the H2 seed scripts: Sonar treats .sql as PL/SQL and warns about
    // a missing Oracle data dictionary.
    sonar {
        properties {
            property 'sonar.sources', 'src/main/java,src/main/resources'
            property 'sonar.exclusions', '**/*.sql'
            // Rules silenced as inappropriate for teaching materials:
            //   S8688 - "pass ZoneId/Clock to now()": LocalDateTime.now() is clearer in demos
            //   S5786 - "remove public from JUnit 5 tests": course code keeps explicit visibility
            //   S1192 - "extract duplicated string literals": constants hurt readability in seed data
            //   S2699 - "test needs an assertion": some tests intentionally verify via console output
            property 'sonar.issue.ignore.multicriteria', 'e1,e2,e3,e4'
            property 'sonar.issue.ignore.multicriteria.e1.ruleKey', 'java:S8688'
            property 'sonar.issue.ignore.multicriteria.e1.resourceKey', '**/*.java'
            property 'sonar.issue.ignore.multicriteria.e2.ruleKey', 'java:S5786'
            property 'sonar.issue.ignore.multicriteria.e2.resourceKey', '**/*.java'
            property 'sonar.issue.ignore.multicriteria.e3.ruleKey', 'java:S1192'
            property 'sonar.issue.ignore.multicriteria.e3.resourceKey', '**/*.java'
            property 'sonar.issue.ignore.multicriteria.e4.ruleKey', 'java:S2699'
            property 'sonar.issue.ignore.multicriteria.e4.resourceKey', '**/*.java'
        }
    }

    tasks.withType(Test).tap {
        configureEach {
            useJUnitPlatform()
            finalizedBy tasks.named('jacocoTestReport')
        }
    }

    jacocoTestReport {
        reports { xml.required = true }
    }
}

wrapper {
    gradleVersion = '9.6.1'
    distributionType = Wrapper.DistributionType.BIN
}